--- a/styles/index.scss
+++ b/styles/index.scss
@@ -46,37 +46,29 @@ body {
     margin-left: 25px;
   }
 
-  .circle {
-    border-radius: 50%;
-    height: auto;
-    width: auto;
+  main {
+    margin-top: 375px;
     display: block;
   }
 
-  main {
-    margin-top: 375px;
-    
-    
-  }
+  // footer {
+  //   width: 100%;
+  //   height: 89px;
+  //   // position: fixed;
+  //   // bottom: 0;
 
-  footer {
-    width: 100%;
-    height: 89px;
-    // position: fixed;
-    // bottom: 0;
-
-    .copyright {
-      width: 187px;
-      height: 15px;
-      top: 53px;
-      left: 17px;
-      font-family: $font-secondary;
-      font-size: 11px;
-      font-weight: 400;
-      line-height: 14.98px;
-      text-align: left;
-    }
-  }
+  //   .copyright {
+  //     width: 187px;
+  //     height: 15px;
+  //     top: 53px;
+  //     left: 17px;
+  //     font-family: $font-secondary;
+  //     font-size: 11px;
+  //     font-weight: 400;
+  //     line-height: 14.98px;
+  //     text-align: left;
+  //   }
+  // }
 
   // @media only screen and (min-width: 1000px) {
   //   body {
