--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,12 +1,17 @@
-@import '../variables';
-
 header {
   display: block;
-  width: 310px;
-  height: 213px;
-
-  margin: 50px auto;
+  width: 100%;
+  margin: 0px auto;
   text-align: center;
+
+  h1 {
+    width: 162px;
+    height: 41px;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 41.09px;
+    margin: 105px auto 22px auto;
+  }
 
   p {
     width: 308px;
@@ -15,15 +20,7 @@ header {
     font-size: 16px;
     font-weight: 400;
     line-height: 23px;
-  }
-
-  h1 {
-    width: 162px;
-    height: 41px;
-    font-size: 35px;
-    font-weight: 400;
-    line-height: 41.09px;
-    margin: 55px auto 30px auto;
+    margin: 0 auto 7px;
   }
 
   button {
@@ -32,24 +29,24 @@ header {
     box-shadow: 5px 10px 14px 0px #07ace64a;
     font-size: 16px;
     font-weight: 700;
-    margin: 45px auto;
+    margin: 20px auto 25px;
     background-color: $color-primary;
   }
 
   .header-img-container {
-    margin: 0 auto;
+    margin: 25px auto 10px;
+    // position: relative;
+    display: block;
     overflow: hidden;
     width: 375px;
-    right: 33px;
-    position: relative;
-    margin-top: 25px;
-    margin-bottom: 10px;
+    // padding-right: 90px;
 
     .header-img {
-      margin: 0 0 35px 0;
-      width: 375px;
+      width: 100%;
       height: 267px;
+      display: block;
       object-fit: cover;
+      margin: 0px auto;
     }
   }
 }
