--- a/styles/_section1.scss
+++ b/styles/_section1.scss
@@ -1,26 +1,21 @@
-@import "../variables";
-@import "../index.scss";
-@import '../Components/card.scss';
-
 .section1 {
   display: block;
   text-align: center;
+  ;
   background-color: red;
-
+  
   h3 {
     font-size: 30px;
     font-weight: 300;
     line-height: 35px;
-    margin-bottom: 35px;
+    margin-bottom: 20px;
   }
-
+  
   .card_section1 {
     @extend .card;
     display: inline-block;
-    text-align: center;
     height: 168px;
-    width: 176px;
-    margin: 0 20px;
+    width: 370px;
 
     .container_icons {
       margin: 0 auto;
@@ -49,12 +44,14 @@
           top: 12px;
           left: 16px;
         }
+
         .eye2 {
           top: 15.5px;
           left: 33px;
           width: 25px;
           height: 25px;
         }
+
         .eye3 {
           width: 12px;
           height: 12px;
@@ -86,7 +83,6 @@
         .box4 {
           top: 14px;
           left: 25px;
-
           width: 52px;
           height: 36px;
         }
@@ -99,23 +95,23 @@
     }
 
     .title {
+      align-items: center;
       font-size: 20px;
       font-weight: 800;
       line-height: 24px;
       letter-spacing: 5.960000038146973px;
       width: 117px;
       height: 24px;
-      margin: 10px auto;
     }
 
     .text {
+      // background-color: red;
       font-size: 17px;
       font-weight: 400;
       line-height: 20px;
       text-align: center;
-      left: 11.15px;
-      width: 75%;
-      padding: 0px;
+      left: 8px;
+      width: 35%;
     }
   }
 }
