--- a/styles/index.css
+++ b/styles/index.css
@@ -38,5 +38,293 @@ body .logo_Oxygen {
 }
 body main {
   margin-top: 375px;
+  display: inline;
+}
+
+nav {
+  width: 375px;
+  height: 70px;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2);
+}
+nav .menu {
+  width: 20px;
+  height: 12px;
+  display: inline-block;
+  margin-bottom: 5px;
+  margin-left: 95px;
+}
+nav .rectangle-menu {
+  width: 20px;
+  height: 2px;
   display: block;
+  margin-bottom: 3px;
+}
+nav ul {
+  display: none;
+}
+
+header {
+  display: block;
+  width: 100%;
+  margin: 0px auto;
+  text-align: center;
+}
+header h1 {
+  width: 162px;
+  height: 41px;
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 41.09px;
+  margin: 105px auto 22px auto;
+}
+header p {
+  width: 308px;
+  height: 57px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 23px;
+  margin: 0 auto 7px;
+}
+header button {
+  width: 310px;
+  height: 67px;
+  box-shadow: 5px 10px 14px 0px rgba(7, 172, 230, 0.2901960784);
+  font-size: 16px;
+  font-weight: 700;
+  margin: 20px auto 25px;
+  background-color: #08a6e4;
+}
+header .header-img-container {
+  margin: 25px auto 10px;
+  display: block;
+  overflow: hidden;
+  width: 375px;
+}
+header .header-img-container .header-img {
+  width: 100%;
+  height: 267px;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0px auto;
+}
+
+.card, .section2 .card_section2, .section1 .card_section1 {
+  width: auto;
+  height: auto;
+  margin: 20px auto;
+}
+.card .pink, .section2 .card_section2 .pink, .section1 .card_section1 .pink,
+.card .blue,
+.section2 .card_section2 .blue,
+.section1 .card_section1 .blue,
+.card .green,
+.section2 .card_section2 .green,
+.section1 .card_section1 .green {
+  display: inline-block;
+  position: relative;
+  border-radius: 50%;
+  height: auto;
+  width: auto;
+  width: 63px;
+  height: 63px;
+}
+.card .pink, .section2 .card_section2 .pink, .section1 .card_section1 .pink {
+  background-color: #eb476e;
+}
+.card .blue, .section2 .card_section2 .blue, .section1 .card_section1 .blue {
+  background: #08a6e4;
+}
+.card .green, .section2 .card_section2 .green, .section1 .card_section1 .green {
+  background: #55dfb4;
+}
+.card .container_vectors, .section2 .card_section2 .container_vectors, .section1 .card_section1 .container_vectors {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.card .head, .section2 .card_section2 .head, .section1 .card_section1 .head,
+.card .body,
+.section2 .card_section2 .body,
+.section1 .card_section1 .body,
+.card .eye1,
+.section2 .card_section2 .eye1,
+.section1 .card_section1 .eye1,
+.card .eye2,
+.section2 .card_section2 .eye2,
+.section1 .card_section1 .eye2,
+.card .eye3,
+.section2 .card_section2 .eye3,
+.section1 .card_section1 .eye3,
+.card .box1,
+.section2 .card_section2 .box1,
+.section1 .card_section1 .box1,
+.card .box2,
+.section2 .card_section2 .box2,
+.section1 .card_section1 .box2,
+.card .box3,
+.section2 .card_section2 .box3,
+.section1 .card_section1 .box3,
+.card .box4,
+.section2 .card_section2 .box4,
+.section1 .card_section1 .box4 {
+  position: absolute;
+}
+
+.section1 {
+  display: block;
+  text-align: center;
+  background-color: red;
+}
+.section1 h3 {
+  font-size: 30px;
+  font-weight: 300;
+  line-height: 35px;
+  margin-bottom: 20px;
+}
+.section1 .card_section1 {
+  display: inline-block;
+  height: 168px;
+  width: 370px;
+}
+.section1 .card_section1 .container_icons {
+  margin: 0 auto;
+  width: 63px;
+  height: 63px;
+  position: relative;
+}
+.section1 .card_section1 .container_icons .container_vectors {
+  height: 51px;
+  width: 44.02px;
+  top: 28px;
+}
+.section1 .card_section1 .container_icons .container_vectors .head {
+  left: 11px;
+  padding-left: 20px;
+}
+.section1 .card_section1 .container_icons .container_vectors .body {
+  padding-left: 21px;
+  top: 27px;
+  left: 0px;
+}
+.section1 .card_section1 .container_icons .container_vectors .eye1 {
+  height: 33px;
+  top: 12px;
+  left: 16px;
+}
+.section1 .card_section1 .container_icons .container_vectors .eye2 {
+  top: 15.5px;
+  left: 33px;
+  width: 25px;
+  height: 25px;
+}
+.section1 .card_section1 .container_icons .container_vectors .eye3 {
+  width: 12px;
+  height: 12px;
+  top: 22.64px;
+  left: 40px;
+}
+.section1 .card_section1 .container_icons .container_vectors .box1 {
+  left: 32px;
+  width: 37px;
+  height: 3px;
+  top: 2px;
+}
+.section1 .card_section1 .container_icons .container_vectors .box2 {
+  top: 6px;
+  left: 29px;
+  width: 43.15px;
+  height: 3px;
+}
+.section1 .card_section1 .container_icons .container_vectors .box3 {
+  top: 10px;
+  left: 26px;
+  width: 48.17px;
+  height: 3px;
+}
+.section1 .card_section1 .container_icons .container_vectors .box4 {
+  top: 14px;
+  left: 25px;
+  width: 52px;
+  height: 36px;
+}
+.section1 .card_section1 p {
+  margin: 20px auto;
+  font-family: "Raleway", sans-serif;
+}
+.section1 .card_section1 .title {
+  align-items: center;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 24px;
+  letter-spacing: 5.9600000381px;
+  width: 117px;
+  height: 24px;
+}
+.section1 .card_section1 .text {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+  left: 8px;
+  width: 35%;
+}
+
+.section2 {
+  display: block;
+  text-align: center;
+  background-color: #f7f7f7;
+  padding: 25px 0;
+}
+.section2 .card_section2 {
+  background-color: #ffffff;
+  margin: 20px auto;
+  width: 315px;
+  height: 370px;
+  border-radius: 5px;
+  border-color: #e8e9ed;
+}
+.section2 .card_section2 .container_img {
+  margin: 0 auto;
+  position: relative;
+}
+.section2 .card_section2 .container_img .pink,
+.section2 .card_section2 .container_img .blue,
+.section2 .card_section2 .container_img .green {
+  position: absolute;
+  width: 90px;
+  height: 90px;
+  top: 18px;
+}
+.section2 .card_section2 .container_img .img_pc {
+  position: absolute;
+  width: 192.76px;
+  height: 109.93px;
+  top: 37.11px;
+  left: 55.27px;
+}
+.section2 .card_section2 .text_card_section2 {
+  padding-top: 150px;
+}
+.section2 .card_section2 .text_card_section2 p {
+  margin: 0px 20px;
+  width: 90%;
+}
+.section2 .card_section2 .text_card_section2 .title_section2 {
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 35.22px;
+  text-align: left;
+  font-family: "Raleway", sans-serif;
+  width: 198px;
+  height: 72px;
+}
+.section2 .card_section2 .text_card_section2 .text_section2 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: left;
 }/*# sourceMappingURL=index.css.map */
