--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,6 +9,8 @@ $color-quaternary: #eb476e;
 $color-shadow: #00000033;
 $color-shadow-blue: #07ACE64A;
 
+$trumpet-top: 50px; 
+
 * {
   box-sizing: border-box;
   margin: 0;
