--- a/styles/index.css
+++ b/styles/index.css
@@ -1,46 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  min-width: 320px;
-  margin: 0;
-  padding: 0;
-}
-body h1,
-body h2,
-body h3 {
-  font-family: "Raleway", sans-serif;
-}
-body button {
-  border-radius: 25%;
-  font-family: "Open Sans", sans-serif;
-  border-color: transparent;
-  border-radius: 40px;
-  display: inline-block;
-  cursor: pointer;
-  color: #fff;
-}
-body .logo_Oxygen {
-  width: 206px;
-  height: 37px;
-  font-family: "Raleway", sans-serif;
-  font-size: 32px;
-  font-weight: 300;
-  line-height: 37px;
-  text-align: left;
-  color: #08a6e4;
-  display: inline-block;
-  margin-top: 17px;
-  margin-left: 25px;
-}
-body main {
-  margin-top: 375px;
-  display: inline;
-}
-
 nav {
   width: 375px;
   height: 70px;
@@ -105,14 +62,11 @@ header .header-img-container .header-img {
   width: 100%;
   height: 267px;
   display: block;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   margin: 0px auto;
 }
 
 .card, .section1 .card_section1 {
-  width: auto;
-  height: auto;
   margin: 0px auto;
 }
 .card .pink, .section1 .card_section1 .pink,
@@ -164,15 +118,19 @@ header .header-img-container .header-img {
 }
 
 .section1 {
-  display: block;
-  text-align: center;
+  display: inline-block;
   padding-bottom: 50px;
 }
 .section1 h3 {
+  width: 303px;
+  height: 112px;
+  top: 714px;
+  left: 36px;
+  font-family: "Raleway", sans-serif;
   font-size: 30px;
   font-weight: 300;
   line-height: 35px;
-  margin-bottom: 35px;
+  margin: 0 auto 25px;
 }
 .section1 .card_section1 {
   display: inline-block;
@@ -244,7 +202,7 @@ header .header-img-container .header-img {
 .section1 .card_section1 p {
   margin: 0px auto;
   font-family: "Raleway", sans-serif;
-  color: #A5A5A5;
+  color: #a5a5a5;
 }
 .section1 .card_section1 .title {
   align-items: center;
@@ -401,4 +359,216 @@ header .header-img-container .header-img {
   padding-top: 50px;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
-}/*# sourceMappingURL=index.css.map */
+}
+
+.card, .section1 .card_section1 {
+  margin: 0px auto;
+}
+.card .pink, .section1 .card_section1 .pink,
+.card .blue,
+.section1 .card_section1 .blue,
+.card .green,
+.section1 .card_section1 .green {
+  display: inline-block;
+  position: relative;
+  border-radius: 50%;
+  height: auto;
+  width: auto;
+  width: 63px;
+  height: 63px;
+}
+.card .pink, .section1 .card_section1 .pink {
+  background-color: #eb476e;
+}
+.card .blue, .section1 .card_section1 .blue {
+  background: #08a6e4;
+}
+.card .green, .section1 .card_section1 .green {
+  background: #55dfb4;
+}
+.card .container_vectors, .section1 .card_section1 .container_vectors {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.card .head, .section1 .card_section1 .head,
+.card .body,
+.section1 .card_section1 .body,
+.card .eye1,
+.section1 .card_section1 .eye1,
+.card .eye2,
+.section1 .card_section1 .eye2,
+.card .eye3,
+.section1 .card_section1 .eye3,
+.card .box1,
+.section1 .card_section1 .box1,
+.card .box2,
+.section1 .card_section1 .box2,
+.card .box3,
+.section1 .card_section1 .box3,
+.card .box4,
+.section1 .card_section1 .box4 {
+  position: absolute;
+}
+
+.section3 {
+  display: inline-block;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 50px;
+}
+.section3 h3 {
+  margin-bottom: 6px;
+  display: block;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 42.26px;
+  height: 42px;
+}
+.section3__card3 {
+  width: 293px;
+  height: 251px;
+  border-radius: 18px;
+  display: inline-block;
+  margin: 10px auto 55px;
+  overflow: hidden;
+}
+.section3__card3:nth-of-type(1) {
+  border: 1px solid #eb476e;
+}
+.section3__card3:nth-of-type(1) .section3__card3__containerPrice__price {
+  color: #eb476e;
+}
+.section3__card3:nth-of-type(2) {
+  transform: scale(110%);
+  border: 1px solid #08a6e4;
+}
+.section3__card3:nth-of-type(2) .section3__card3__containerPrice__price {
+  color: #08a6e4;
+}
+.section3__card3:nth-of-type(3) {
+  border: 1px solid #55dfb4;
+}
+.section3__card3:nth-of-type(3) .section3__card3__containerPrice__price {
+  color: #55dfb4;
+}
+.section3__card3__containerPrice {
+  position: absolute;
+  display: block;
+  width: 38%;
+  margin: 0 auto;
+  padding: 67px 0;
+  height: 251px;
+}
+.section3__card3__containerPrice__basic {
+  height: 20px;
+  margin: 0 auto;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+}
+.section3__card3__containerPrice__price {
+  width: 59;
+  height: 60px;
+  padding-top: 0px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 46px;
+  font-weight: 300;
+  line-height: 60px;
+  margin: 0 auto;
+}
+.section3__card3__containerPrice__subtitle {
+  width: 74px;
+  height: 14px;
+  margin: 0 auto;
+  font-family: "Raleway", sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 10.09px;
+  color: #13253b;
+}
+.section3__card3__containerFeature {
+  display: inline-block;
+  height: 248px;
+  width: 45%;
+  position: absolute;
+  right: 40px;
+  padding: 25px 0;
+}
+.section3__card3__containerFeature__input {
+  width: 10%;
+  height: 90%;
+  display: block;
+  position: absolute;
+}
+.section3__card3__containerFeature__input__checkbox {
+  width: 11px;
+  height: 11px;
+}
+.section3__card3__containerFeature__text {
+  display: block;
+  position: absolute;
+  width: 89%;
+  left: 20px;
+}
+.section3__card3__containerFeature__text__title {
+  width: 115px;
+  height: 19px;
+  left: 21px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19.07px;
+  text-align: left;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  min-width: 320px;
+  margin: 0;
+  padding: 0;
+}
+body h1,
+body h2,
+body h3 {
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 42.26px;
+  margin-bottom: 30px;
+  width: 100%;
+}
+body button {
+  border-radius: 25%;
+  font-family: "Open Sans", sans-serif;
+  border-color: transparent;
+  border-radius: 40px;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+}
+body .logo_Oxygen {
+  width: 206px;
+  height: 37px;
+  font-family: "Raleway", sans-serif;
+  font-size: 32px;
+  font-weight: 300;
+  line-height: 37px;
+  text-align: left;
+  color: #08a6e4;
+  display: inline-block;
+  margin-top: 17px;
+  margin-left: 25px;
+}
+body main {
+  margin-top: 375px;
+  display: inline;
+}
