--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
 @import "./section1.scss";
 @import "./section2.scss";
 @import "./section3.scss";
+@import "./section4.scss";
 
 * {
   box-sizing: border-box;
